k8s/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "bean-bloom"
  namespace: "bean-bloom"
  labels:
    app: "bean-bloom"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "bean-bloom"
  template:
    metadata:
      labels:
        app: "bean-bloom"
    spec:
      containers:
        - name: "bean-bloom"
          image: "949753869464.dkr.ecr.ap-southeast-1.amazonaws.com/bean-bloom:72dcf1fe219287a2b542ec52b7add63ef0662ce3"
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
